# zoning

./: .gitignore  README.md  package.json  pyproject.toml
frontend/: next.config.mjs  package.json
frontend/app/: MainApp.tsx  NhoodChart.tsx  NhoodSelector.tsx  ParcelHistogram.tsx  ParcelMap.tsx  TwitterShareButton.tsx  layout.tsx  page.tsx  types.ts
frontend/app/api/rezoning/: db_client.ts  route.ts
frontend/data/: buildings.geo.json  nhoods.geo.json
notebooks/: build_parcel_geojson.ipynb  capacity.ipynb  postgres_etl.ipynb  transform_data.sql  zoning.ipynb
